--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 *{
     margin:0;
     Padding:0;
     box-sizing: border-box;
 }
-
-nav{
-    height: 10vh;
-    padding: 0 50px;
+body{
+    background-color: white;
 }
-header ul{
-    display: flex;
+
+li,a, button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bolder;
+    font-size:18px;
+    color: black;
+    text-decoration:none;
+    text-transform: uppercase;
+}
+
+h1, h2, h3 , h4, h5, p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bolder;
+}
+
+ul{
     list-style: none;
-    align-content: center;
-    justify-content: space-between;
 }
 
+.navlinks{
+    display: flex;
+    height: 11vh;
+    width: 100%;
+    padding: 0px 50px;
+    background-color: white;
+    justify-items: right;
+    align-items: center;
+    position: fixed;
+    z-index: 10;
+    margin:0;
+    border-top: #FBEEE1 solid 5px;
+}
+
+.navlinks li{
+        display:inline-block;
+        width: 150px;
+        text-align: center;
+}
+
+.logo{
+    margin-right: auto;
+    text-transform: uppercase;
+    height: 100%;
+    padding-top: 15px;
+}
+
+#search{
+    border: 3px black solid;
+    border-radius: 12px;
+    padding: 10px;
+}
+
+.background-container{
+    background: url(imgs/book.jpg) center center;
+    background-size: cover;
+    opacity: 0.5;
+    height: 600px; 
+    padding-top: 16vh;
+}
+
+.intro-container{
+    background-color:#F3EADB;
+    height: 900px; 
+}
+
+.title, .title2{
+    z-index: 4;
+    color:white;
+    text-align: center;
+}
+
+.title2{
+    font-family: 'Dancing Script', cursive;
+    font-size: 4em;
+}
+
+button{
+    background-color: #ECBE9B;
+    color: white;
+    padding: 10px;
+    border: none;
+}
 aside ul{
     display: flex;
 }
@@ -23,7 +98,40 @@ aside ul{
     display: flex;
 }
 
-footer ul{
+.footerlinks{
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    height: 15vh;
 }
 
+.social{
+    display: flex;
+    justify-content: space-around;
+}
+
+.box-with-article{
+    background-color:white;
+    width: 80%;
+    height: 450px;
+    position: relative;
+    bottom: 300px;
+    left: 150px;
+    padding: 50px 50px 100px 700px;
+}
+
+.box-with-article p{
+padding: 20px;
+}
+
+.box-with-article h3{
+    padding: 0 20px;
+    font-size: 2em;
+    color:#ECBE9B;
+    font-family: 'Dancing Script', cursive;
+   }
+
+.box-with-article button{
+    margin: 10px 20px 20px;
+}
