--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 }
 body{
     background-color: white;
+    position: relative;
 }
 
 li,a, button {
@@ -110,19 +111,20 @@ aside ul{
     display: flex;
     justify-content: space-around;
 }
-
+/* featured article */
 .box-with-article{
     background-color:white;
-    width: 80%;
+    width: 70%;
     height: 450px;
     position: relative;
     bottom: 300px;
-    left: 150px;
-    padding: 50px 50px 100px 700px;
+    left: 300px;
+    padding: 50px 50px 100px 500px;
 }
 
 .box-with-article p{
 padding: 20px;
+line-height: 1.6;
 }
 
 .box-with-article h3{
@@ -134,4 +136,25 @@ padding: 20px;
 
 .box-with-article button{
     margin: 10px 20px 20px;
+}
+
+.featuredimg{
+    background: url(imgs/cook.jpg) center center;
+    background-size: cover;
+    width: 500px;
+    height: 450px; 
+    position: absolute;
+    z-index: 3;
+    top: 285px;
+    left: 200px;
+}
+
+.featuredwhite{
+    background-color: white;
+    width: 560px;
+    height: 500px;
+    z-index:2;
+    position: absolute;
+    top: 260px;
+    left: 170px;
 }
