--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ li,a, button {
     text-transform: uppercase;
 }
 
-h1, h2, h3 , h4, h5, p, label {
+h1, h2, h3 , h4, h5,h6, p, label {
     font-family: "Montserrat", sans-serif;
     font-weight: bolder;
 }
@@ -83,27 +83,17 @@ button{
     padding: 10px;
     border: none;
 }
+
 aside ul{
     display: flex;
 }
 
-.above-footer{
-    display: flex;
-}
 
-.footerlinks{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    height: 15vh;
-}
 
-.social{
-    display: flex;
-    justify-content: space-around;
-}
+
+
 /* featured article */
+
 .box-with-article{
     background-color:white;
     width: 70%;
@@ -116,11 +106,11 @@ aside ul{
 }
 
 .box-with-article p{
-padding: 20px;
+padding: 20px 20px 10px 20px;
 line-height: 1.6;
 }
 
-.box-with-article h3{
+.cursive{
     padding: 0 20px;
     font-size: 2em;
     color:#ECBE9B;
@@ -163,6 +153,7 @@ line-height: 1.6;
     z-index: 4;
     color:white;
     text-align: center;
+    text-shadow: 3px 3px 3px rgba(0,0,0,0.2);
 }
 
 .title2{
@@ -172,5 +163,117 @@ line-height: 1.6;
 
 .email{
     display: inline-block;
-    padding: 200px 0px 50px 27%;
+    padding: 200px 0px 50px 22%;
+}
+/* end of featured section */
+
+
+
+
+/* Start of articles */
+
+.summer-picnic{
+    display: flex;
+    list-style: none;
+    flex-flow: row wrap;
+}
+
+.summer-picnic li{
+    flex: 1 1 320px;
+}
+
+.summer-picnic img{
+    width: 100%;
+    height: auto;
+}
+
+.artisian{
+    display: flex;
+    list-style: none;
+    flex-flow: row wrap;
+    margin-top: 5%;
+}
+
+.artisian li{
+    flex: 1 1 320px;
+}
+
+.artisian img{
+    width: 100%;
+    height: auto;
+}
+
+.writing{
+padding: 1% 4% 0 4%;
+}
+
+article h6{
+    color:#F3EADB;
+    font-size: 1em;
+}
+
+article h3{
+    font-size: 2em;
+}
+
+article p{
+    font-size: 0.8em;
+    line-height: 2;
+    text-transform: none;
+}
+
+.read{
+    font-size: 0.7em;
+    padding: 3% 4%;
+    margin-top: 3%;
+}
+
+aside img{
+    width: 200px;
+    height: 200px;
+}
+
+/* Above footer */
+.above-footer{
+    background-color: #ECBE9B ;
+    height: 15vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3%;
+    color: white;
+    font-weight: normal;
+}
+
+/* footer */
+.footerlinks{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    height: 20vh;
+    padding: 0 5%;
+    text-align: center;
+}
+
+.social{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 5%;
+}
+
+.footerlinks h3{
+    padding-bottom: 3.5%;
+    font-size: 2em;
+    color:#ECBE9B;
+    text-transform: none;
+    font-family: 'Dancing Script', cursive;
+}
+
+.footerlinks p{
+    color:#ECBE9B;
+}
+
+#copy p{
+    font-size: 0.8em;
 }
