--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,17 @@ ul{
     list-style: none;
 }
 
+.social{
+    display: flex;
+    justify-content: center;
+}
+
+.social li{
+    margin: 5%;
+}
+
+/* navigation starts here */
+
 .navlinks{
     display: flex;
     height: 11vh;
@@ -53,21 +64,33 @@ ul{
 
 .logo{
     margin-right: auto;
-    text-transform: uppercase;
+    text-transform: none;
     height: 100%;
-    padding-top: 15px;
+    padding-top: 18px;
+    font-size: 2em;
+    color: #ECBE9B;
+    font-family:'Dancing Script', cursive;
 }
 
 #search{
     border: 3px black solid;
-    border-radius: 12px;
-    padding: 10px;
+    padding: 5px;
 }
+
+#search:focus, #search:active{
+    border-color: none;
+}
+
+/* navigation ends here */
+
+
+
+/* background images and colors container */
 
 .background-container{
     background: url(imgs/cooking.jpg) center center;
     background-size: cover;
-    opacity: 0.5;
+    opacity: 0.7;
     height: 600px; 
     padding-top: 16vh;
 }
@@ -77,18 +100,6 @@ ul{
     height: 900px; 
 }
 
-button{
-    background-color: #ECBE9B;
-    color: white;
-    padding: 10px;
-    border: none;
-}
-
-aside ul{
-    display: flex;
-}
-
-
 
 
 
@@ -96,18 +107,25 @@ aside ul{
 
 .box-with-article{
     background-color:white;
-    width: 70%;
+    width: 65%;
     height: 450px;
     position: absolute;
     top: 300px;
     left: 300px;
-    padding: 50px 50px 100px 500px;
+    padding: 50px 50px 100px 470px;
     z-index: 2;
 }
 
 .box-with-article p{
 padding: 20px 20px 10px 20px;
 line-height: 1.6;
+}
+
+.read{
+    margin: 10px 20px 20px;
+    font-size: 0.7em;
+    padding: 3% 4%;
+    margin-top: 3%;
 }
 
 .cursive{
@@ -117,15 +135,11 @@ line-height: 1.6;
     font-family: 'Dancing Script', cursive;
 }
 
-.box-with-article button{
-    margin: 10px 20px 20px;
-}
-
 .featuredimg{
     background: url(imgs/cook.jpg) center center;
     background-size: cover;
     width: 500px;
-    height: 450px; 
+    height: 440px; 
     position: absolute;
     z-index: 3;
     top: 285px;
@@ -135,13 +149,15 @@ line-height: 1.6;
 .featuredwhite{
     background-color: white;
     width: 560px;
-    height: 500px;
+    height: 490px;
     z-index:2;
     position: absolute;
     top: 260px;
     left: 170px;
 }
 
+
+/* header with name at top of page */
 .titleheader{
     position: absolute;
     top: 120px;
@@ -161,21 +177,50 @@ line-height: 1.6;
     font-size: 4em;
 }
 
+/* end of title header at top of page */
+
+/* email submission section under article */
+
 .email{
     display: inline-block;
-    padding: 200px 0px 50px 22%;
+    padding: 200px 0px 50px 20%;
 }
+
+.emailinput, .name{
+    border: none;
+    margin-left: 7px;
+    padding: 10px;
+}
+label{
+    margin-right: 30px;
+}
+
+.submit{
+    padding:10px 20px;
+    margin-left: 7px;
+    font-size: 0.8em;
+}
+
+button{
+    background-color: #ECBE9B;
+    color: white;
+    padding: 10px;
+    border: none;
+}
+
 /* end of featured section */
 
 
 
 
-/* Start of articles */
+/* Start of main content */
 
+/* summer picnic */
 .summer-picnic{
     display: flex;
     list-style: none;
     flex-flow: row wrap;
+    margin-top: 5%;
 }
 
 .summer-picnic li{
@@ -187,11 +232,12 @@ line-height: 1.6;
     height: auto;
 }
 
+/* artisian */
 .artisian{
     display: flex;
     list-style: none;
-    flex-flow: row wrap;
-    margin-top: 5%;
+    flex-flow: row-reverse wrap;
+    margin: 5% 0 5% 0;
 }
 
 .artisian li{
@@ -222,16 +268,46 @@ article p{
     text-transform: none;
 }
 
-.read{
-    font-size: 0.7em;
-    padding: 3% 4%;
-    margin-top: 3%;
+main{
+    display: flex;
+    flex-flow: row-reverse;
 }
 
-aside img{
-    width: 200px;
-    height: 200px;
+article{
+    flex: 4 2 10%;
 }
+
+aside{
+    flex: 1 1 5%;
+    margin: 3% 5% 0 2%;
+    justify-self: center;
+    text-align: center;
+}
+
+aside .author{
+    background: url(imgs/girl.jpg) center center;
+    background-size: cover;
+    width: 100%;
+    height: 200px; 
+}
+
+aside h4{
+    margin:3%;
+    font-size: 1.3em;
+    color:#ECBE9B;
+}
+
+aside h5{
+    color: #ECBE9B;
+    opacity: 0.8;
+    text-transform: uppercase;
+}
+
+aside ul{
+    display: flex;
+}
+/* end of main content */
+
 
 /* Above footer */
 .above-footer{
@@ -243,6 +319,7 @@ aside img{
     padding: 0 3%;
     color: white;
     font-weight: normal;
+    text-transform: uppercase;
 }
 
 /* footer */
@@ -252,14 +329,8 @@ aside img{
     justify-content: space-between;
     align-items: center;
     height: 20vh;
-    padding: 0 5%;
+    padding: 0 3%;
     text-align: center;
-}
-
-.social{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 5%;
 }
 
 .footerlinks h3{
@@ -276,4 +347,15 @@ aside img{
 
 #copy p{
     font-size: 0.8em;
+    color: black;
+    opacity: 0.3;
 }
+
+#copy{
+    padding-left: 2%;
+}
+
+.emailfooter p{
+    margin-bottom: 3%;
+}
+/* end of footer */
