--- a/styles.css
+++ b/styles.css
@@ -451,9 +451,42 @@ aside ul{
         width: 100%;
         height: 300px; 
     }
+
+    .box-with-article{
+        background-color:white;
+        width: 65%;
+        height: 340px;
+        position: absolute;
+        top: 550px;
+        left: 250px;
+        padding: 20px;
+        z-index: 7;
+    }
+    
+    .box-with-article p{
+    padding: 20px 20px 10px 20px;
+    line-height: 1.6;
+    }
+
+    .background-container{
+        background: url(imgs/cooking.jpg) center center;
+        background-size: cover;
+        opacity: 0.7;
+        height: 780px; 
+        padding-top: 16vh;
+    }
+    
+    .intro-container{
+        background-color:#F3EADB;
+        height: 1030px; 
+    }
+
+    .email{
+        padding-top: 160px;
+    }
 }
 @media only screen and (max-width: 768px){
-    
+
 }
 
 @media only screen and (max-width: 600px){
